# llm-evals-workshop

./: .gitignore  README.md  llm_evals_healthcare_15min.ipynb  pyproject.toml
