[project]
name = "workshop-llm-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "notebook>=7.0.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel",
    "jupyterlab"
]